[package]
name = "mulberry-quick-bets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mulberry_quick_bets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
pyth-sdk-solana = "0.8.0"
bytemuck = {version = "1.13.1", features = ["min_const_generics", "derive"]}
mpl-token-metadata = "3.1.0"